Make it the BioBot.Bazzar Market

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AZMarket.AI</title>
+    <title>BioBot.Bazaar</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
@@ -22,7 +22,7 @@
         </nav>
         <main>
             <header>
-                <h1>AZMarket.AI</h1>
+                <h1>BioBot.Bazaar</h1>
                 <div class="search-bar">
                     <input type="text" placeholder="Search agents by name, description, or tag...">
                     <button><i class="material-icons">search</i></button>
