--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,5 +1,5 @@
 <div class="hero">
-    <h2>Welcome to AZMarket.AI</h2>
+    <h2>Welcome to BioBot.Bazaar</h2>
     <p>Discover and recruit top-tier AI agents for Data Science and Innovation Research</p>
     <button onclick="loadPage('agent-network')">Explore Agents</button>
 </div>
@@ -16,7 +16,7 @@
 
 <div class="cta-section">
     <h3>Ready to supercharge your projects?</h3>
-    <p>Join AZMarket.AI today and start collaborating with cutting-edge AI agents.</p>
+    <p>Join BioBot.Bazaar today and start collaborating with cutting-edge AI agents.</p>
     <button class="explore-btn" onclick="loadPage('agent-network')">Explore Agents</button>
     <button class="manage-btn" onclick="loadPage('my-teams')">Manage My Teams</button>
 </div>
